:sparkles: Implementação de ProblemDetails